--- a/src/assets/scss/settings/_base.scss
+++ b/src/assets/scss/settings/_base.scss
@@ -8,7 +8,7 @@ $base-transition-bounce: #{$base-transition-time}s #{$base-cubic-bounce};
 $base-border-color: $guyn-ice;
 
 $base-primary-color: $guyn-Skyblue;
-$base-secondary-color: $guyn-Orange;
+$base-secondary-color: $guyn-Plum;
 $base-dark-color: $guyn-Plum;
 $base-light-color: $guyn-Ice;
 
