--- a/src/assets/scss/typography/_spacing.scss
+++ b/src/assets/scss/typography/_spacing.scss
@@ -3,6 +3,20 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+p,
+table {
 	margin: 0;
+	& + h4,
+	& + h5,
+	& + h6,
+	& + table,
+	& + p {
+		margin-top: 1em;
+	}
+	& + h1,
+	& + h2,
+	& + h3 {
+		margin-top: 0.5em;
+	}
 }
