--- a/src/.vuepress/theme/styles/index.scss
+++ b/src/.vuepress/theme/styles/index.scss
@@ -13,9 +13,10 @@ body {
 h1,
 h2,
 h3,
-h4 {
+h4,
+p {
 	& + .example {
-		margin-top: 1em;
+		margin-top: 2em;
 	}
 }
 .button {
@@ -33,5 +34,12 @@ h4 {
 	& + h4,
 	& + .button {
 		margin-top: 1em;
+	}
+}
+
+.page__content {
+	h2,
+	h3 {
+		font-weight: normal;
 	}
 }
