--- a/src/assets/scss/typography/_headings.scss
+++ b/src/assets/scss/typography/_headings.scss
@@ -2,10 +2,12 @@
 	&--h1 {
 		font-size: 64px;
 		font-weight: bold;
+		color: $base-primary-color;
 	}
 	&--h2 {
 		font-size: 48px;
 		font-weight: bold;
+		color: $base-primary-color;
 	}
 	&--h3 {
 		font-size: 32px;
