--- a/src/components/general/Notification/Notification.scss
+++ b/src/components/general/Notification/Notification.scss
@@ -1,18 +1,34 @@
 @import "base";
 .notification {
 	--notification-color: #{$base-notification-color};
-	padding: 1em;
+	--notification-background: #{setLightness($base-notification-color, 80)};
+	--notification-text: #{setLightness($base-notification-color, 20)};
+	padding: 1em 1em 1em 1.5em;
+	border-radius: 0 $base-border-radius $base-border-radius $base-border-radius;
 	&__title {
 		color: var(--notification-color);
 	}
 	&--warning {
 		--notification-color: #{$base-warning-color};
+		--notification-background: #{setLightness($base-warning-color, 80)};
+		--notification-text: #{setLightness($base-warning-color, 20)};
 	}
 	&--error {
 		--notification-color: #{$base-error-color};
+		--notification-background: #{setLightness($base-error-color, 80)};
+		--notification-text: #{setLightness($base-error-color, 20)};
 	}
 	&--success {
 		--notification-color: #{$base-success-color};
+		--notification-background: #{setLightness($base-success-color, 80)};
+		--notification-text: #{setLightness($base-success-color, 20)};
 	}
-	box-shadow: 0 -0.5em 0 0 var(--notification-color) inset;
+	background-image: linear-gradient(
+		var(--notification-color),
+		var(--notification-color)
+	);
+	background-size: 0.5em 100%;
+	background-repeat: repeat-y;
+	background-color: var(--notification-background);
+	color: var(--notification-text);
 }
