add code blocks

--- a/src/assets/scss/settings/_base.scss
+++ b/src/assets/scss/settings/_base.scss
@@ -9,6 +9,7 @@ $base-border-color: $guyn-ice;
 
 $base-primary-color: $guyn-Skyblue;
 $base-secondary-color: $guyn-Plum;
+$base-tertiary-color: $guyn-Orange;
 $base-dark-color: $guyn-Plum;
 $base-light-color: $guyn-Ice;
 
