add support for changing colors

--- a/src/.vuepress/theme/styles/_page.scss
+++ b/src/.vuepress/theme/styles/_page.scss
@@ -2,6 +2,6 @@
 	// padding: calc(100vw / 24 * 1);
 }
 .page__content {
-	padding: calc(100vw / 24 * 1);
+	padding: var(--base-padding, #{$base-padding});
 	min-height: 100vh;
 }
