--- a/src/.vuepress/theme/styles/_typography.scss
+++ b/src/.vuepress/theme/styles/_typography.scss
@@ -14,6 +14,6 @@ h5 {
 		opacity: 0.5;
 		transform: translateY(-50%);
 		font-weight: normal;
-		color: $base-primary-color;
+		color: $base-color-primary;
 	}
 }
