--- a/src/assets/scss/color/index.scss
+++ b/src/assets/scss/color/index.scss
@@ -1,5 +1,6 @@
-@import "~guyn";
-$colors: $guyn-colors;
+// @import "~guyn";
+// $colors: $guyn-colors;
+@import "colors";
 @import "functions";
 @import "classes";
 @import "custom-properties";
