--- a/src/components/forms/InputText/InputText.scss
+++ b/src/components/forms/InputText/InputText.scss
@@ -1,40 +1,87 @@
-@import "base";
-.input-field--text {
-	display: flex;
-	flex-direction: column-reverse;
-	justify-content: start;
-	.input-field {
-		&__input {
-			border: $base-form-border;
-			border-radius: $base-border-radius;
-			background-color: transparent;
-			color: currentColor;
-			font-size: 1em;
-			line-height: 1.5;
-			padding: 0.75em;
-			& + .input-field__label {
-				margin-bottom: 0.5em;
-			}
-			&:focus {
-				outline: none;
-				box-shadow: 0 0 0 3px $base-form-highlight;
-				& + .input-field__label {
-					color: $base-primary-color;
-				}
-			}
-			&::placeholder {
-				color: currentColor;
-				font-style: italic;
-				opacity: 0.5;
-			}
-			&:placeholder-shown {
-				opacity: 0.5;
-				& + .input-field__label {
-					opacity: 0.5;
-				}
-			}
-		}
-		&__label {
-		}
-	}
-}
+// @import "base";
+// .input-field--text {
+// 	display: flex;
+// 	flex-direction: column-reverse;
+// 	justify-content: start;
+// 	.input-field--inline {
+// 		display: flex;
+// 		flex-direction: row-reverse;
+// 		justify-content: start;
+// 	}
+// 	.input-field {
+// 		&__unit {
+// 			position: absolute;
+// 			top: 50%;
+// 			right: 1em;
+// 			text-transform: uppercase;
+// 			opacity: 0.5;
+// 			font-size: 0.75em;
+// 			transform: translateY(-50%);
+// 		}
+// 		&__input {
+// 			border: var(--base-form-border, var(--base-border, #{$base-border}));
+// 			border-radius: var(
+// 				--base-form-border-radius,
+// 				var(--base-border-radius, #{$base-border-radius})
+// 			);
+// 			position: relative;
+// 			& + .input-field__label {
+// 				margin-bottom: 0.5em;
+// 			}
+// 			&:focus {
+// 				outline: none;
+// 				box-shadow: 0 0 0 3px
+// 					var(
+// 						--base-form-highlight,
+// 						var(--base-color-primary, #{$base-color-primary})
+// 					);
+// 				& + .input-field__label {
+// 					color: var(
+// 						--base-form-highlight,
+// 						var(--base-color-primary, #{$base-color-primary})
+// 					);
+// 				}
+// 			}
+
+// 			input {
+// 				&::placeholder {
+// 					color: var(
+// 						--base-form-text-color,
+// 						var(--base-text-color, #{$base-text-color})
+// 					);
+// 					font-style: italic;
+// 					opacity: 0.5;
+// 				}
+// 				&:placeholder-shown {
+// 					opacity: 0.5;
+// 					& + .input-field__label {
+// 						opacity: 0.5;
+// 					}
+// 				}
+// 				padding: var(
+// 					--base-form-padding,
+// 					var(--base-padding, #{$base-form-padding})
+// 				);
+// 				border: none;
+// 				width: 100%;
+// 				height: 100%;
+// 				background-color: transparent;
+// 				color: var(
+// 					--base-form-text-color,
+// 					var(--base-text-color, #{$base-text-color})
+// 				);
+// 				font-size: 1em;
+// 				line-height: 1;
+// 				// padding: 0 1em;
+// 				-webkit-appearance: none;
+// 				border-radius: inherit;
+// 				&:focus {
+// 					outline: none;
+// 				}
+// 			}
+// 		}
+
+// 		&__label {
+// 		}
+// 	}
+// }
