--- a/src/components/forms/Radio/Radio.scss
+++ b/src/components/forms/Radio/Radio.scss
@@ -20,7 +20,16 @@
 				display: block;
 				width: 1em;
 				height: 1em;
-				box-shadow: 0 0 0 1px currentColor inset;
+				box-shadow: 0 0 0
+					var(
+						--base-form-border-width,
+						var(--base-border-width, #{$base-border-width})
+					)
+					var(
+						--base-form-border-color,
+						var(--base-border-color, #{$base-border-color})
+					)
+					inset;
 				border-radius: 50%;
 				transform: translateY(-50%);
 			}
@@ -35,7 +44,7 @@
 				border-radius: 50%;
 				background-color: var(
 					--checkbox-check-color,
-					var(--checkbox-check-default, #{$base-primary-color})
+					var(--checkbox-check-default, #{$base-color-primary})
 				);
 				transform: translateY(-50%) scale(0);
 				transition: transform $base-transition-bounce;
@@ -49,7 +58,7 @@
 		input:focus + label {
 			&::before {
 				box-shadow: 0 0 0 1px currentColor inset,
-					0 0 0 2px #{rgba($base-primary-color, 0.33)};
+					0 0 0 2px setOpacity(--base-color-primary, 0.25);
 			}
 		}
 	}
