--- a/src/assets/scss/content/_code.scss
+++ b/src/assets/scss/content/_code.scss
@@ -3,14 +3,14 @@ td {
 	code {
 		position: relative;
 		display: inline-block;
-		color: var(--code-text, #{setLightness($base-secondary-color, 20)});
+		color: var(--code-text, #{setLightness($base-color-secondary, 20)});
 		padding: 0 0.25em;
 
 		&::before {
 			z-index: -1;
 			background-color: var(
 				--code-background,
-				#{setLightness($base-secondary-color, 90)}
+				#{setLightness($base-color-secondary, 90)}
 			);
 			content: "";
 			border-radius: $base-border-radius;
@@ -25,6 +25,6 @@ td {
 }
 
 table code {
-	--code-text: #{setLightness($base-tertiary-color, 20)};
-	--code-background: #{setLightness($base-tertiary-color, 90)};
+	--code-text: #{setLightness($base-color-tertiary, 20)};
+	--code-background: #{setLightness($base-color-tertiary, 90)};
 }
