--- a/src/assets/scss/content/_table.scss
+++ b/src/assets/scss/content/_table.scss
@@ -1,15 +1,16 @@
-table:not([class]){
-    border-collapse: collapse;
-    width: 100%;
-    thead{
-        th{
-            text-align: left;
-        }
-    }
-    th,td{
-        padding: 0.5em;
-    }
-    td{
-        border-top: 1px solid rgba($base-primary-color,0.5); 
-    }
+table:not([class]) {
+	border-collapse: collapse;
+	width: 100%;
+	thead {
+		th {
+			text-align: left;
+		}
+	}
+	th,
+	td {
+		padding: 0.5em;
+	}
+	td {
+		border-top: 1px solid rgba($base-color-primary, 0.5);
+	}
 }
