--- a/src/assets/scss/typography/_headings.scss
+++ b/src/assets/scss/typography/_headings.scss
@@ -2,12 +2,12 @@
 	&--h1 {
 		font-size: 64px;
 		font-weight: bold;
-		color: $base-primary-color;
+		color: var(--base-color-primary, #{$base-color-primary});
 	}
 	&--h2 {
 		font-size: 48px;
 		font-weight: bold;
-		color: $base-primary-color;
+		color: var(--base-color-primary, #{$base-color-primary});
 	}
 	&--h3 {
 		font-size: 32px;
