--- a/src/assets/scss/typography/_spacing.scss
+++ b/src/assets/scss/typography/_spacing.scss
@@ -5,18 +5,20 @@ h4,
 h5,
 h6,
 p,
-table {
+table,
+.input-field {
 	margin: 0;
 	& + h4,
 	& + h5,
 	& + h6,
 	& + table,
+	& + .input-field,
 	& + p {
-		margin-top: 1em;
+		margin-top: var(--base-margin, #{$base-margin});
 	}
 	& + h1,
 	& + h2,
 	& + h3 {
-		margin-top: 0.5em;
+		margin-top: calc(var(--base-margin, #{$base-margin}) / 2);
 	}
 }
