--- a/src/components/forms/Option/Option.scss
+++ b/src/components/forms/Option/Option.scss
@@ -1,66 +1,117 @@
 @import "base";
-.input-field {
-	&--option {
-		&:only-of-type {
-			--border: #{$base-border-radius};
-		}
-		label {
-			position: relative;
+
+@function subs($args...) {
+	@debug $args;
+}
+
+.input-field--option {
+	&:only-of-type {
+		--border: #{$base-border-radius};
+	}
+	label {
+		position: relative;
+		display: block;
+		padding-left: 1.5em;
+	}
+	input {
+		position: absolute;
+		clip-path: inset(100% 100% 100% 100%);
+		opacity: 0;
+	}
+	input + label {
+		// animation: bumpOut 0.1s;
+		padding: 1em;
+		border: var(
+				--base-form-border-top-left,
+				var(--base-form-border, var(--base-border, #{$base-border}))
+			)
+			var(
+				--base-form-border-radius-top-right,
+				var(
+					--base-form-border-radius,
+					var(--base-border-radius, #{$base-border-radius})
+				)
+			)
+			var(
+				--base-form-border-radius-bottom-right,
+				var(
+					--base-form-border-radius,
+					var(--base-border-radius, #{$base-border-radius})
+				)
+			)
+			var(
+				--base-form-border-radius-bottom-left,
+				var(
+					--base-form-border-radius,
+					var(--base-border-radius, #{$base-border-radius})
+				)
+			);
+		border-radius: var(
+				--base-form-border-radius-top-left,
+				var(
+					--base-form-border-radius,
+					var(--base-border-radius, #{$base-border-radius})
+				)
+			)
+			var(
+				--base-form-border-radius-top-right,
+				var(
+					--base-form-border-radius,
+					var(--base-border-radius, #{$base-border-radius})
+				)
+			)
+			var(
+				--base-form-border-radius-bottom-right,
+				var(
+					--base-form-border-radius,
+					var(--base-border-radius, #{$base-border-radius})
+				)
+			)
+			var(
+				--base-form-border-radius-bottom-left,
+				var(
+					--base-form-border-radius,
+					var(--base-border-radius, #{$base-border-radius})
+				)
+			);
+	}
+	input:focus + label {
+		.input-field__text {
 			display: block;
-			padding-left: 1.5em;
+			transform: scale(1.05);
 		}
-		input {
-			position: absolute;
-			clip-path: inset(100% 100% 100% 100%);
-			opacity: 0;
+	}
+	input:checked + label {
+		background-color: currentColor;
+		animation: bump 0.15s;
+		.input-field__text {
+			color: var(--bg);
 		}
-		input + label {
-			// animation: bumpOut 0.1s;
-			padding: 1em;
-			border: 2px solid currentColor;
-			border-radius: var(--border-top-left, var(--border, 0))
-				var(--border-top-right, var(--border, 0))
-				var(--border-bottom-right, var(--border, 0))
-				var(--border-bottom-left, var(--border, 0));
-		}
-		input:focus + label {
-			.input-field__text {
-				display: block;
-				transform: scale(1.05);
-			}
-		}
-		input:checked + label {
-			background-color: currentColor;
-			animation: bump 0.15s;
-			.input-field__text {
-				color: var(--bg);
-			}
-			@at-root {
-				@keyframes bump {
-					0% {
-						transform: scale(1);
-					}
-
-					80% {
-						transform: scale(1.05);
-					}
-
-					100% {
-						transform: scale(1);
-					}
+		@at-root {
+			@keyframes bump {
+				0% {
+					transform: scale(1);
 				}
-				@keyframes bumpOut {
-					0% {
-						transform: scale(1);
-					}
 
-					80% {
-						transform: scale(0.9);
-					}
+				80% {
+					transform: scale(1.05);
+				}
 
-					100% {
-						transform: scale(1);
-					}
+				100% {
+					transform: scale(1);
+				}
+			}
+			@keyframes bumpOut {
+				0% {
+					transform: scale(1);
+				}
+
+				80% {
+					transform: scale(0.9);
+				}
+
+				100% {
+					transform: scale(1);
 				}
 			}
 		}
